[package]
authors = ["shadyfennec"]
categories = ["command-line-utilities"]
description = "A process memory limiter"
edition = "2021"
homepage = "https://github.com/shadyfennec/memlimit"
keywords = ["memory", "limiter"]
license = "MIT OR Apache-2.0"
name = "memlimit"
readme = "README.md"
repository = "https://github.com/shadyfennec/memlimit"
version = "0.1.0"

[dependencies]
clap = {version = "4.5.4", features = ["derive"]}
colored = "2.1.0"
itertools = "0.13.0"
sysinfo = {version = "0.30.12", default-features = false}
thiserror = "1.0.61"
